# MGA802_ProjetFinal

./: .gitignore  LICENSE.md  README.md  deck.yaml  main.py  requirements.txt  setup.cfg  tutoriel.docx
documentation/: conf.py  modules.rst  optimiseur_rl.rst
documentation/_build/doctrees/: environment.pickle  index.doctree  main.doctree  modules.doctree  optimiseur_rl.doctree
documentation/_build/html/: .buildinfo  genindex.html  index.html  main.html  modules.html  objects.inv  optimiseur_rl.html  py-modindex.html  search.html  searchindex.js
documentation/_build/html/_modules/: index.html  main.html
documentation/_build/html/_modules/optimiseur_rl/: LecteurYAML.html  environnement_minimisation.html  fonction_recompense.html  reglage_hyperparametres.html  visualisation.html
documentation/_build/html/_sources/: index.rst.txt
optimiseur_rl/: LecteurYAML.py  __init__.py  deck.yaml  environnement_minimisation.py  fonction_recompense.py  reglage_hyperparametres.py  requirements.txt  visualisation.py
