[metadata]
name = optimiseur_rl
version = 1.0.0
author = Cedric Foffe
description = Programme d-optimisation mono et multi-objectifs
long_description = Ce programme permet la resolution des problemes d-optimisation mono et multi-objectifs avec ou sans contraintes, en utilisant des algorithmes d-apprentissage par renforcement
url = https://github.com/ceco2018/MGA802_ProjetFinal.git
keywords = sample, example, setuptools

[options]
python_requires = >=3.7
install_requires =
    numpy
    gym
    Markdown
    matplotlib
    stable-baselines3
    torch
    tqdm
    PyYAML
    setuptools